fix active label for workspaces widget

--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -37,8 +37,8 @@
             <source>Hidden</source>
             <target>Cachée</target>
         </trans-unit>
-        <trans-unit id="actif" >
-            <source>Actif</source>
+        <trans-unit id="active" >
+            <source>Active</source>
             <target>Actif</target>
         </trans-unit>
         <trans-unit id="noResult" >
