--- a/Resources/Private/Language/Module/NumberOfRecordsByContentType/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/NumberOfRecordsByContentType/fr.locallang.xlf
@@ -9,6 +9,10 @@
                 <source>Number of records by content type</source>
                 <target>Nombre de ligne par le type de contenu</target>
             </trans-unit>
+            <trans-unit id="numberOfRecordsByContentTypeDesc" >
+                <source>Displays a table of number of records by content type</source>
+                <target>Affiche le nombre de ligne par le type de contenu</target>
+            </trans-unit>
             <trans-unit id="table" >
                 <source>Table</source>
                 <target>Table</target>
@@ -22,8 +26,8 @@
                 <target>jours </target>
             </trans-unit>
             <trans-unit id="totalNumberOfRecords" >
-                <source>Total number of records </source>
-                <target>Nombre total des lignes </target>
+                <source>Total</source>
+                <target>Totale</target>
             </trans-unit>
 		</body>
 	</file>
