--- a/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf
+++ b/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf
@@ -3,9 +3,11 @@
 	<file source-language="en" datatype="plaintext" original="EXT:qc_widgets/Resources/Private/Language/Module/locallang.xlf" date="2021-09-15T18:22:34Z">
 		<header/>
 		<body>
-        <body>
             <trans-unit id="numberOfRecordsByContentType" >
                 <source>Number of records by content type</source>
+            </trans-unit>
+            <trans-unit id="numberOfRecordsByContentTypeDesc" >
+                <source>Displays a table of number of records by content type</source>
             </trans-unit>
             <trans-unit id="table" >
                 <source>Table</source>
@@ -17,7 +19,7 @@
                 <source>days </source>
             </trans-unit>
             <trans-unit id="totalNumberOfRecords" >
-                <source>Total number of records </source>
+                <source>Total</source>
             </trans-unit>
 		</body>
 	</file>
