main change : control if the table doesn't contains any columns

--- a/Resources/Private/Language/Module/NumberOfRecordsByContentType/fr.locallang.xlf
+++ b/Resources/Private/Language/Module/NumberOfRecordsByContentType/fr.locallang.xlf
@@ -19,7 +19,7 @@
             </trans-unit>
             <trans-unit id="last" >
                 <source>Last </source>
-                <target>Les dernières </target>
+                <target>Les derniers </target>
             </trans-unit>
             <trans-unit id="days" >
                 <source>days </source>
