--- a/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf
+++ b/Resources/Private/Language/Module/NumberOfRecordsByContentType/locallang.xlf
@@ -4,10 +4,10 @@
 		<header/>
 		<body>
             <trans-unit id="numberOfRecordsByContentType" >
-                <source>Number of records per table</source>
+                <source>Number of records by table</source>
             </trans-unit>
             <trans-unit id="numberOfRecordsByContentTypeDesc" >
-                <source>Displays a table of number of records by content type</source>
+                <source>Displays the number of records by table</source>
             </trans-unit>
             <trans-unit id="table" >
                 <source>Table</source>
